// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uni_modules playground uni-app-x build:app-android 1`] = `"logo.46719607.png"`;

exports[`uni_modules playground uni-app-x build:app-ios 1`] = `
"import { defineComponent, openBlock, createElementBlock, Fragment, createElementVNode, toDisplayString } from 'vue';
import Logo from './test-com1/components/test-com1-1/logo.png';
import _export_sfc from 'plugin-vue:export-helper';

const _sfc_main$1 = defineComponent({
    data() {
        return {
            msg: 'test-com1-1',
            logo: Logo
        };
    }
});

const _style_0$1 = {"text":{"":{"color":"#FF0000"}}};

function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(Fragment, null, [
    createElementVNode("text", { class: "text" }, toDisplayString($data.msg) + toDisplayString($data.logo), 1),
    createElementVNode("image", { src: Logo })
  ], 64);
}
const testCom11 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["styles", [_style_0$1]]]);

const _sfc_main = defineComponent({
    data() {
        return {
            msg: 'test-com1-2',
            logo: Logo
        };
    }
});

const _style_0 = {"text2":{"":{"color":"#FF0000"}}};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock(Fragment, null, [
    createElementVNode("text", { class: "text2" }, toDisplayString($data.msg) + toDisplayString($data.logo), 1),
    createElementVNode("image", { src: Logo })
  ], 64);
}
const testCom12 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["styles", [_style_0]]]);

export { testCom11 as TestCom11, testCom12 as TestCom12 };
"
`;

exports[`uni_modules playground uni-app-x build:app-ios 2`] = `
"import { defineComponent, openBlock, createElementBlock, toDisplayString } from 'vue';
import Logo from './test-com2/components/test-com2-1/logo.png';
import _export_sfc from 'plugin-vue:export-helper';

function test() { }

const _sfc_main$1 = defineComponent({
    data() {
        return {
            msg: 'test-com2-1',
            logo: Logo
        };
    }
});

const _style_0$1 = {"text":{"":{"color":"#FF0000"}}};

function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("text", { class: "text" }, toDisplayString($data.msg) + toDisplayString($data.logo), 1);
}
const testCom21 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["styles", [_style_0$1]]]);

const _sfc_main = defineComponent({
    data() {
        return {
            msg: 'test-com2-2',
            logo: Logo
        };
    }
});

const _style_0 = {"text2":{"":{"color":"#FF0000"}}};

function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  return openBlock(), createElementBlock("text", { class: "text2" }, toDisplayString($data.msg) + toDisplayString($data.logo), 1);
}
const testCom22 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["styles", [_style_0]]]);

export { testCom21 as TestCom21, testCom22 as TestCom22, test };
"
`;

exports[`uni_modules playground uni-app-x build:h5 1`] = `
"import "@dcloudio/uni-components/style/text.css";
import { Text, Image } from "@dcloudio/uni-h5";
import "@dcloudio/uni-components/style/image.css";
import "@dcloudio/uni-components/style/resize-sensor.css";
import { defineComponent, openBlock, createElementBlock, Fragment, createVNode, withCtx, createTextVNode, toDisplayString } from "vue";
import Logo from "./test-com1/components/test-com1-1/logo.png";
import _export_sfc from "plugin-vue:export-helper";
const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com1-1",
      logo: Logo
    };
  }
});
function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(Fragment, null, [
    createVNode(_component_v_uni_text, { class: "text" }, {
      default: withCtx(() => [
        createTextVNode(toDisplayString($data.msg) + toDisplayString($data.logo), 1)
      ]),
      _: 1
    }),
    createVNode(_component_v_uni_image, { src: Logo })
  ], 64);
}
const testCom11 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["__scopeId", "data-v-14e59d16"]]);
const _sfc_main = defineComponent({
  data() {
    return {
      msg: "test-com1-2",
      logo: Logo
    };
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  const _component_v_uni_image = Image;
  return openBlock(), createElementBlock(Fragment, null, [
    createVNode(_component_v_uni_text, { class: "text2" }, {
      default: withCtx(() => [
        createTextVNode(toDisplayString($data.msg) + toDisplayString($data.logo), 1)
      ]),
      _: 1
    }),
    createVNode(_component_v_uni_image, { src: Logo })
  ], 64);
}
const testCom12 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__scopeId", "data-v-3c9048c8"]]);
export {
  testCom11 as TestCom11,
  testCom12 as TestCom12
};
"
`;

exports[`uni_modules playground uni-app-x build:h5 2`] = `
"import "@dcloudio/uni-components/style/text.css";
import { Text } from "@dcloudio/uni-h5";
import { defineComponent, openBlock, createBlock, withCtx, createTextVNode, toDisplayString } from "vue";
import Logo from "./test-com2/components/test-com2-1/logo.png";
import _export_sfc from "plugin-vue:export-helper";
function test() {
}
const _sfc_main$1 = defineComponent({
  data() {
    return {
      msg: "test-com2-1",
      logo: Logo
    };
  }
});
function _sfc_render$1(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  return openBlock(), createBlock(_component_v_uni_text, { class: "text" }, {
    default: withCtx(() => [
      createTextVNode(toDisplayString($data.msg) + toDisplayString($data.logo), 1)
    ]),
    _: 1
  });
}
const testCom21 = /* @__PURE__ */ _export_sfc(_sfc_main$1, [["render", _sfc_render$1], ["__scopeId", "data-v-75bce91a"]]);
const _sfc_main = defineComponent({
  data() {
    return {
      msg: "test-com2-2",
      logo: Logo
    };
  }
});
function _sfc_render(_ctx, _cache, $props, $setup, $data, $options) {
  const _component_v_uni_text = Text;
  return openBlock(), createBlock(_component_v_uni_text, { class: "text2" }, {
    default: withCtx(() => [
      createTextVNode(toDisplayString($data.msg) + toDisplayString($data.logo), 1)
    ]),
    _: 1
  });
}
const testCom22 = /* @__PURE__ */ _export_sfc(_sfc_main, [["render", _sfc_render], ["__scopeId", "data-v-6088c0cc"]]);
export {
  testCom21 as TestCom21,
  testCom22 as TestCom22,
  test
};
"
`;

exports[`uni_modules playground uni-app-x build:h5 3`] = `
"



.text[data-v-14e59d16] {
    color: red;
}
.image[data-v-14e59d16] {
    background: url('@/uni_modules/test-com1/components/test-com1-1/logo.png');
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 4`] = `
"



.text2[data-v-3c9048c8] {
    color: red;
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 5`] = `
"

.text[data-v-75bce91a] {
    color: red;
}
.image[data-v-75bce91a] {
    background: url('@/uni_modules/test-com2/components/test-com2-1/logo.png');
}
"
`;

exports[`uni_modules playground uni-app-x build:h5 6`] = `
"

.text2[data-v-6088c0cc] {
    color: red;
}
"
`;
